@@ -922,49 +922,312 @@ country2tz = {
     "ZW" : "Africa/Harare",
 }
 
-languages = [
-    "Albanian",
-    "Arabic",
-    "Basque",
-    "Belarusian",
-    "Bosnian",
-    "Bulgarian",
-    "Catalan",
-    "Chinese (Simplified)",
-    "Chinese (Traditional)",
-    "Croatian",
-    "Czech",
-    "Danish",
-    "Dutch",
-    "English",
-    "Estonian",
-    "Finnish",
-    "French",
-    "German",
-    "Greek",
-    "Hebrew",
-    "Hungarian",
-    "Indonesian",
-    "Italian",
-    "Japanese",
-    "Korean",
-    "Kurdish",
-    "Latvian",
-    "Lithuanian",
-    "Macedonian",
-    "Norwegian",
-    "NorwegianNynorsk",
-    "Polish",
-    "PortugueseBR",
-    "Portuguese",
-    "Romanian",
-    "Russian",
-    "Slovak",
-    "Slovenian",
-    "Spanish",
-    "Swedish",
-    "Thai",
-    "Turkish",
-    "Ukrainian",
-    ]
+language2lang_country = {
+    "Afar (ET)" : "aa_ET",
+    "Afrikaans (ZA)" : "af_ZA",
+    "Amharic (ET)" : "am_ET",
+    "Aragonese (ES)" : "an_ES",
+    "Arabic (AE)" : "ar_AE",
+    "Arabic (BH)" : "ar_BH",
+    "Arabic (DZ)" : "ar_DZ",
+    "Arabic (EG)" : "ar_EG",
+    "Arabic (IN)" : "ar_IN",
+    "Arabic (IQ)" : "ar_IQ",
+    "Arabic (JO)" : "ar_JO",
+    "Arabic (KW)" : "ar_KW",
+    "Arabic (LB)" : "ar_LB",
+    "Arabic (LY)" : "ar_LY",
+    "Arabic (MA)" : "ar_MA",
+    "Arabic (OM)" : "ar_OM",
+    "Arabic (QA)" : "ar_QA",
+    "Arabic (SA)" : "ar_SA",
+    "Arabic (SD)" : "ar_SD",
+    "Arabic (SY)" : "ar_SY",
+    "Arabic (TN)" : "ar_TN",
+    "Arabic (YE)" : "ar_YE",
+    "Azerbaijani (AZ)" : "az_AZ",
+    "Assamese (IN)" : "as_IN",
+    "Assamese (ES)" : "ast_ES",
+    "Belarusian (BY)" : "be_BY",
+    "Bulgarian (BG)" : "bg_BG",
+    "Bengali (BD)" : "bn_BD",
+    "Bengali (IN)" : "bn_IN",
+    "Breton (FR)" : "br_FR",
+    "Bosnian (BA)" : "bs_BA",
+    "Bosnian (ER)" : "byn_ER",
+    "Catalan (AD)" : "ca_AD",
+    "Catalan (ES)" : "ca_ES",
+    "Catalan (FR)" : "ca_FR",
+    "Catalan (IT)" : "ca_IT",
+    "Cree (UA)" : "crh_UA",
+    "Czech (CZ)" : "cs_CZ",
+    "Czech (PL)" : "csb_PL",
+    "Welsh (GB)" : "cy_GB",
+    "Danish (DK)" : "da_DK",
+    "German (AT)" : "de_AT",
+    "German (BE)" : "de_BE",
+    "German (CH)" : "de_CH",
+    "German (DE)" : "de_DE",
+    "German (LU)" : "de_LU",
+    "Dzongkha (BT)" : "dz_BT",
+    "Greek (GR)" : "el_GR",
+    "Greek (CY)" : "el_CY",
+    "English (AU)" : "en_AU",
+    "English (BW)" : "en_BW",
+    "English (CA)" : "en_CA",
+    "English (DK)" : "en_DK",
+    "English (GB)" : "en_GB",
+    "English (HK)" : "en_HK",
+    "English (IE)" : "en_IE",
+    "English (IN)" : "en_IN",
+    "English (NZ)" : "en_NZ",
+    "English (PH)" : "en_PH",
+    "English (SG)" : "en_SG",
+    "English (US)" : "en_US",
+    "English (ZA)" : "en_ZA",
+    "English (ZW)" : "en_ZW",
+    "Esperanto" : "eo",
+    "Spanish (AR)" : "es_AR",
+    "Spanish (BO)" : "es_BO",
+    "Spanish (CL)" : "es_CL",
+    "Spanish (CO)" : "es_CO",
+    "Spanish (CR)" : "es_CR",
+    "Spanish (DO)" : "es_DO",
+    "Spanish (EC)" : "es_EC",
+    "Spanish (ES)" : "es_ES",
+    "Spanish (GT)" : "es_GT",
+    "Spanish (HN)" : "es_HN",
+    "Spanish (MX)" : "es_MX",
+    "Spanish (NI)" : "es_NI",
+    "Spanish (PA)" : "es_PA",
+    "Spanish (PE)" : "es_PE",
+    "Spanish (PR)" : "es_PR",
+    "Spanish (PY)" : "es_PY",
+    "Spanish (SV)" : "es_SV",
+    "Spanish (US)" : "es_US",
+    "Spanish (UY)" : "es_UY",
+    "Spanish (VE)" : "es_VE",
+    "Estonian (EE)" : "et_EE",
+    "Basque (ES)" : "eu_ES",
+    "Basque (FR)" : "eu_FR",
+    "Persian (IR)" : "fa_IR",
+    "Finnish (FI)" : "fi_FI",
+    "Faroese (FO)" : "fo_FO",
+    "French (BE)" : "fr_BE",
+    "French (CA)" : "fr_CA",
+    "French (CH)" : "fr_CH",
+    "French (FR)" : "fr_FR",
+    "French (LU)" : "fr_LU",
+    "Frisian (NL)" : "fy_NL",
+    "Irish (IE)" : "ga_IE",
+    "Gaelic (GB)" : "gd_GB",
+    "Gaelic (ER)" : "gez_ER",
+    "Gaelic (ET)" : "gez_ET",
+    "Galician (ES)" : "gl_ES",
+    "Gujarati (IN)" : "gu_IN",
+    "Manx (GB)" : "gv_GB",
+    "Hebrew (IL)" : "he_IL",
+    "Hindi (IN)" : "hi_IN",
+    "Croatian (HR)" : "hr_HR",
+    "Croatian (DE)" : "hsb_DE",
+    "Hungarian (HU)" : "hu_HU",
+    "Armenian (AM)" : "hy_AM",
+    "Interlingua" : "ia",
+    "Indonesian (ID)" : "id_ID",
+    "Icelandic (IS)" : "is_IS",
+    "Italian (CH)" : "it_CH",
+    "Italian (IT)" : "it_IT",
+    "Inuktitut (IL)" : "iw_IL",
+    "Japanese (JP)" : "ja_JP",
+    "Georgian (GE)" : "ka_GE",
+    "Kazakh (KZ)" : "kk_KZ",
+    "Kalaallisut (GL)" : "kl_GL",
+    "Central Khmer (KH)" : "km_KH",
+    "Kannada (IN)" : "kn_IN",
+    "Korean (KR)" : "ko_KR",
+    "Kurdish (TR)" : "ku_TR",
+    "Cornish (GB)" : "kw_GB",
+    "Kyrgyz (KG)" : "ky_KG",
+    "Ganda (UG)" : "lg_UG",
+    "Lao (LA)" : "lo_LA",
+    "Lithuanian (LT)" : "lt_LT",
+    "Latvian (LV)" : "lv_LV",
+    "Latvian (IN)" : "mai_IN",
+    "Malagasy (MG)" : "mg_MG",
+    "Maori (NZ)" : "mi_NZ",
+    "Macedonian (MK)" : "mk_MK",
+    "Malayalam (IN)" : "ml_IN",
+    "Mongolian (MN)" : "mn_MN",
+    "Marathi (IN)" : "mr_IN",
+    "Malay (MY)" : "ms_MY",
+    "Maltese (MT)" : "mt_MT",
+    "Bokmal (NO)" : "nb_NO",
+    "Nepali (NP)" : "ne_NP",
+    "Dutch (BE)" : "nl_BE",
+    "Dutch (NL)" : "nl_NL",
+    "Nynorsk (NO)" : "nn_NO",
+    "Norwegian (NO)" : "no_NO",
+    "Ndebele (ZA)" : "nr_ZA",
+    "Ndebele (ZA)" : "nso_ZA",
+    "Occitan (FR)" : "oc_FR",
+    "Oromo (ET)" : "om_ET",
+    "Oromo (KE)" : "om_KE",
+    "Oriya (IN)" : "or_IN",
+    "Panjabi (IN)" : "pa_IN",
+    "Panjabi (PK)" : "pa_PK",
+    "Polish (PL)" : "pl_PL",
+    "Portuguese (BR)" : "pt_BR",
+    "Portuguese (PT)" : "pt_PT",
+    "Romanian (RO)" : "ro_RO",
+    "Russian (RU)" : "ru_RU",
+    "Russian (UA)" : "ru_UA",
+    "Kinyarwanda (RW)" : "rw_RW",
+    "Sanskrit (IN)" : "sa_IN",
+    "Sami (NO)" : "se_NO",
+    "Sinhala (LK)" : "si_LK",
+    "Sinhala (ET)" : "sid_ET",
+    "Slovak (SK)" : "sk_SK",
+    "Slovenian (SI)" : "sl_SI",
+    "Somali (DJ)" : "so_DJ",
+    "Somali (ET)" : "so_ET",
+    "Somali (KE)" : "so_KE",
+    "Somali (SO)" : "so_SO",
+    "Albanian (AL)" : "sq_AL",
+    "Serbian (ME)" : "sr_ME",
+    "Serbian (RS)" : "sr_RS",
+    "Swati (ZA)" : "ss_ZA",
+    "Sotho (ZA)" : "st_ZA",
+    "Swedish (FI)" : "sv_FI",
+    "Swedish (SE)" : "sv_SE",
+    "Tamil (IN)" : "ta_IN",
+    "Telugu (IN)" : "te_IN",
+    "Tajik (TJ)" : "tg_TJ",
+    "Thai (TH)" : "th_TH",
+    "Tigrinya (ER)" : "ti_ER",
+    "Tigrinya (ET)" : "ti_ET",
+    "Tigrinya (ER)" : "tig_ER",
+    "Tagalog (PH)" : "tl_PH",
+    "Tswana (ZA)" : "tn_ZA",
+    "Turkish (CY)" : "tr_CY",
+    "Turkish (TR)" : "tr_TR",
+    "Tsonga (ZA)" : "ts_ZA",
+    "Tatar (RU)" : "tt_RU",
+    "Ukrainian (UA)" : "uk_UA",
+    "Urdu (PK)" : "ur_PK",
+    "Uzbek (UZ)" : "uz_UZ",
+    "Venda (ZA)" : "ve_ZA",
+    }
 
+#shorter list
+language2lang_country = {
+    "Afrikaans" : "af_ZA",
+    "Amharic" : "am_ET",
+    "Aragonese" : "an_ES",
+    "Arabic" : "ar_AE",
+    "Azerbaijani" : "az_AZ",
+    "Assamese" : "as_IN",
+    "Belarusian" : "be_BY",
+    "Bulgarian" : "bg_BG",
+    "Bengali" : "bn_BD",
+    "Breton" : "br_FR",
+    "Bosnian" : "bs_BA",
+    "Catalan" : "ca_ES",
+    "Cree" : "crh_UA",
+    "Czech" : "cs_CZ",
+    "Welsh" : "cy_GB",
+    "Danish" : "da_DK",
+    "German" : "de_DE",
+    "Dzongkha" : "dz_BT",
+    "Greek" : "el_GR",
+    "English (GB)" : "en_GB",
+    "English (US)" : "en_US",
+    "Esperanto" : "eo",
+    "Spanish" : "es_ES",
+    "Estonian" : "et_EE",
+    "Basque" : "eu_FR",
+    "Persian" : "fa_IR",
+    "Finnish" : "fi_FI",
+    "Faroese" : "fo_FO",
+    "French" : "fr_FR",
+    "Frisian" : "fy_NL",
+    "Irish" : "ga_IE",
+    "Gaelic" : "gd_GB",
+    "Galician" : "gl_ES",
+    "Gujarati" : "gu_IN",
+    "Manx" : "gv_GB",
+    "Hebrew" : "he_IL",
+    "Hindi" : "hi_IN",
+    "Croatian" : "hr_HR",
+    "Hungarian" : "hu_HU",
+    "Armenian" : "hy_AM",
+    "Interlingua" : "ia",
+    "Indonesian" : "id_ID",
+    "Icelandic" : "is_IS",
+    "Italian" : "it_IT",
+    "Inuktitut" : "iw_IL",
+    "Japanese" : "ja_JP",
+    "Georgian" : "ka_GE",
+    "Kazakh" : "kk_KZ",
+    "Kalaallisut" : "kl_GL",
+    "Khmer" : "km_KH",
+    "Kannada" : "kn_IN",
+    "Korean" : "ko_KR",
+    "Kurdish" : "ku_TR",
+    "Cornish" : "kw_GB",
+    "Kyrgyz" : "ky_KG",
+    "Ganda" : "lg_UG",
+    "Lao" : "lo_LA",
+    "Lithuanian" : "lt_LT",
+    "Latvian" : "lv_LV",
+    "Malagasy" : "mg_MG",
+    "Maori" : "mi_NZ",
+    "Macedonian" : "mk_MK",
+    "Malayalam" : "ml_IN",
+    "Mongolian" : "mn_MN",
+    "Marathi" : "mr_IN",
+    "Malay" : "ms_MY",
+    "Maltese" : "mt_MT",
+    "Bokmal" : "nb_NO",
+    "Nepali" : "ne_NP",
+    "Dutch" : "nl_NL",
+    "Nynorsk" : "nn_NO",
+    "Norwegian" : "no_NO",
+    "Ndebele" : "nr_ZA",
+    "Occitan" : "oc_FR",
+    "Oromo" : "om_ET",
+    "Oriya" : "or_IN",
+    "Panjabi" : "pa_IN",
+    "Polish" : "pl_PL",
+    "Portuguese (BR)" : "pt_BR",
+    "Portuguese (PT)" : "pt_PT",
+    "Romanian" : "ro_RO",
+    "Russian" : "ru_RU",
+    "Kinyarwanda" : "rw_RW",
+    "Sanskrit" : "sa_IN",
+    "Sami" : "se_NO",
+    "Sinhala" : "si_LK",
+    "Slovak" : "sk_SK",
+    "Slovenian" : "sl_SI",
+    "Somali" : "so_SO",
+    "Albanian" : "sq_AL",
+    "Serbian" : "sr_ME",
+    "Swati" : "ss_ZA",
+    "Sotho" : "st_ZA",
+    "Swedish" : "sv_SE",
+    "Tamil" : "ta_IN",
+    "Telugu" : "te_IN",
+    "Tajik" : "tg_TJ",
+    "Thai" : "th_TH",
+    "Tigrinya" : "ti_ET",
+    "Tagalog" : "tl_PH",
+    "Tswana" : "tn_ZA",
+    "Turkish" : "tr_TR",
+    "Tsonga" : "ts_ZA",
+    "Tatar" : "tt_RU",
+    "Ukrainian" : "uk_UA",
+    "Urdu" : "ur_PK",
+    "Uzbek" : "uz_UZ",
+    "Venda" : "ve_ZA",
+}
+
+lang_country2language = dict([(v,k) for k,v in language2lang_country.items()])
