@@ -230,6 +230,8 @@ wubi (9.04) UNRELEASED; urgency=low
   * Fixed vfat filesystem detection (LP: #369225)
   * More robust ISO check to avoid failures when the ISO file is
     corrupted
+  * Change the locale according to the language selector (LP: #373421)
+  * The compact command is not supported on a vfat filesystems
 
   [ Hampus Wessman ]
   * Added a new metalink parser
@@ -271,4 +273,4 @@ wubi (9.04) UNRELEASED; urgency=low
   * Check for preseed.$(distro) in the data directory before assuming that
     preseed.lupin should be used. (LP: #359834)
 
- -- Agostino Russo <agostino.russo@gmail.com>  Thu, 07 May 2009 23:32:09 +0100
+ -- Agostino Russo <agostino.russo@gmail.com>  Fri, 08 May 2009 01:45:49 +0100
